@@ -1,0 +1,3 @@
+BASEDIR=../../..
+include $(BASEDIR)/makefiles/Makefile.toplevel
+include $(BASEDIR)/makefiles/Makefile.common
