@@ -1,0 +1,5 @@
+
+# type ('a, 'b) t = { fst : 'a; snd : 'b; }
+# val with_fst : ('a, 'b) t -> 'c -> ('c, 'b) t = <fun>
+# - : (int, string) t = {fst = 2; snd = ""}
+# 
